--- a/03.01.06 Autores 2/css/escritores.css
+++ b/03.01.06 Autores 2/css/escritores.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "playball";
-  src: url("fuentes/playball.woff");
+  src: url("../fuentes/playball.woff");
 }
 
 html {
