--- a/03.02. Ejercicio 2 (pseudoclases)/css/css.css
+++ b/03.02. Ejercicio 2 (pseudoclases)/css/css.css
@@ -1,4 +1,3 @@
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -19,13 +18,13 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
 	line-height: 1;
-    background-color: #A9A9A9;
 }
 ol, ul {
 	list-style: none;
@@ -43,35 +42,5 @@ table {
 	border-spacing: 0;
 }
 h1{
-    display: block;
-    font-size: 2em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    font-family: "Open Sans", sans-serif;
-    text-align: center;
-}
-ul {
-    display: block;
-    list-style-type: disc;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    list-style: none;
-}
-a{
-    text-decoration: none;
-    color: black;
-    font-family: "Open Sans", sans-serif;
-}
-li img{
-    height: 15px;
-    margin-right: 4px;
+    
 }
