--- a/03.02. Actividad 6 (Transformaciones)/css/ej1_base.css
+++ b/03.02. Actividad 6 (Transformaciones)/css/ej1_base.css
@@ -1,70 +1,92 @@
-.container{
-    position: relative;
-  }
-  .caja{
-    width: 180px;
-    height: 180px;
-    background-color: #30B037;
-    color: #FFF;
-    text-align: center;
-    line-height: 180px;
-    margin: 15px;
-    float: left;
-    font-size: 18px;
-    font-family: Arial;
-  }
-  .caja1{
-    background-color: #C0392B;
-    transition: all 1s linear 0s;
-  }
-  .caja1:hover{
-    transform: scale(1.5,1.5);
-  }
-  .caja2{
-    background-color: #9B59B6;
-    transition: all 1s linear 0s;
-  }
-  .caja2:hover{
-    transform: rotate(30deg);
-  }
-  .caja3{
-    background-color: #2980B9;
-    transition: all 1s linear 0s;
-  }
-  .caja3:hover{
-    transform: skew(20deg);
-  }
-  .caja4{
-    background-color: #3498DB;
-    transition: all 1s linear 0s;
-  }
-  .caja4:hover{
-    transform: skewX(20deg);
-  }
-  .caja5{
-    background-color: #17A589;
-    transition: all 1s linear 0s;
-  }
-  .caja6{
-    background-color: #F1C40F;
-    transition: all 1s linear 0s;
-  }
-  .caja7{
-    background-color: #E67E22;
-  }
-  .caja8{
-    background-color: #95A5A6;
-    transition: all 1s linear 0s;
-  }
-  .caja9{
-    background-color: #2C3E50;
-    transition: all 1s linear 0s;
-  }
-  .caja10{
-    background-color: #808080;
-    transition: all 1s linear 0s;
-  }
-  .caja11{
-    background-color: black;
-    transition: all 1s linear 0s;
-  }
+.container {
+  position: relative;
+}
+.caja {
+  width: 180px;
+  height: 180px;
+  background-color: #30b037;
+  color: #fff;
+  text-align: center;
+  line-height: 180px;
+  margin: 15px;
+  float: left;
+  font-size: 18px;
+  font-family: Arial;
+}
+.caja1 {
+  background-color: #c0392b;
+  transition: all 1s linear 0s;
+}
+.caja1:hover {
+  transform: scale(1.5, 1.5);
+}
+.caja2 {
+  background-color: #9b59b6;
+  transition: all 1s linear 0s;
+}
+.caja2:hover {
+  transform: rotate(30deg);
+}
+.caja3 {
+  background-color: #2980b9;
+  transition: all 1s linear 0s;
+}
+.caja3:hover {
+  transform: skew(20deg);
+}
+.caja4 {
+  background-color: #3498db;
+  transition: all 1s linear 0s;
+}
+.caja4:hover {
+  transform: skewX(20deg);
+}
+.caja5 {
+  background-color: #17a589;
+  transition: all 1s linear 0s;
+}
+.caja5:hover {
+  transform: skewY(20deg);
+}
+.caja6 {
+  background-color: #f1c40f;
+  transition: all 1s linear 0s;
+}
+.caja6:hover {
+  transform: translate(200px);
+}
+.caja7 {
+  background-color: #e67e22;
+  transition: all 1s linear 0s;
+}
+.caja7:hover {
+  transform: translateX(200px);
+}
+.caja8 {
+  background-color: #95a5a6;
+  transition: all 1s linear 0s;
+}
+.caja8:hover {
+  transform: translateY(200px);
+}
+.caja9 {
+  background-color: #2c3e50;
+  transition: all 1s linear 0s;
+}
+.caja9:hover {
+  transform: perspective(200px);
+}
+.caja10 {
+  background-color: #808080;
+  transition: all 1s linear 0s;
+}
+.caja10:hover {
+  transform: perspective(200px);
+}
+.caja11 {
+  background-color: black;
+  transition: all 1s linear 0s;
+}
+.caja11:hover {
+  transform: matrix(0.5, 0.1, 0.5, 1, 10, -2);
+}
