--- a/03.02 Actividad 5 (menu con transiciones)/css/ej2_base.css
+++ b/03.02 Actividad 5 (menu con transiciones)/css/ej2_base.css
@@ -38,7 +38,7 @@ a.contacto {
   border-top: solid #9600b4;
   transition-property: background-color;
   transition-duration: 1s;
-  transition-timing-function: cubic-bezier(0.23, 1, 0.320, 1);
+  transition-timing-function: linear;
 }
 a.contacto:hover{
     background-color: #9600b4;
